fixing folder/files structure

--- a/content.html
+++ b/content.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Content - Zamsurgea Community</title>
-  <link rel="icon" type="image/png" href="tab-logo.png">
-  <link rel="stylesheet" href="content.css">
-</head>
-<body>
-  <div class="container">
-    <div class="left-section">
-      <img src="tab-logo.png" alt="ZAMSURGEA Logo" class="logo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Content - Zamsurgea Community</title>
+    <link rel="icon" type="image/png" href="/img/tab-logo.png" />
+    <link rel="stylesheet" href="/styles/content.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="left-section">
+        <img src="/img/tab-logo.png" alt="ZAMSURGEA Logo" class="logo" />
+      </div>
+      <div class="right-section">
+        <h1>ZAMSURGEA Insurance<br />Management System</h1>
+        <a href="loginoption.html">
+          <div class="play-button">
+            <div class="play-icon">&#9654;</div>
+          </div>
+        </a>
+      </div>
     </div>
-    <div class="right-section">
-      <h1>ZAMSURGEA Insurance<br>Management System</h1>
-      <a href="loginoption.html">
-        <div class="play-button">
-          <div class="play-icon">&#9654;</div>
-        </div>
-      </a>      
-    </div>
-  </div>
-</body>
+  </body>
 </html>
