--- a/setup.html
+++ b/setup.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Set-Up Account - Zamsurgea Community</title>
-  <link rel="icon" type="image/png" href="tab-logo.png">
-  <link rel="stylesheet" href="setup.css">
-</head>
-<body>
-  <div class="outer-box">
-    <div class="container">
-      <div class="steps">
-        <div class="step">
-          <div class="circle">1</div>
-          Your Profile
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Set-Up Account - Zamsurgea Community</title>
+    <link rel="icon" type="image/png" href="/img/tab-logo.png" />
+    <link rel="stylesheet" href="/styles/setup.css" />
+  </head>
+  <body>
+    <div class="outer-box">
+      <div class="container">
+        <div class="steps">
+          <div class="step">
+            <div class="circle">1</div>
+            Your Profile
+          </div>
+          <div class="step active">
+            <div class="circle">2</div>
+            Set-Up Account
+          </div>
+          <div class="step">
+            <div class="circle">3</div>
+            Coverage Information
+          </div>
         </div>
-        <div class="step active">
-          <div class="circle">2</div>
-          Set-Up Account
+
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" placeholder="Enter your email" />
         </div>
-        <div class="step">
-          <div class="circle">3</div>
-          Coverage Information
+
+        <div class="form-group">
+          <label>Phone Number</label>
+          <input type="tel" placeholder="Enter your phone number" />
         </div>
-      </div>
 
-      <div class="form-group">
-        <label>Email</label>
-        <input type="email" placeholder="Enter your email" />
-      </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" placeholder="Enter your password" />
+        </div>
 
-      <div class="form-group">
-        <label>Phone Number</label>
-        <input type="tel" placeholder="Enter your phone number" />
-      </div>
-
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" placeholder="Enter your password" />
-      </div>
-
-      <div class="footer">
-        <button class="btn" onclick="window.location.href='signup2.html'">&#8592; Back to Your Profile</button>
-        <button class="btn" onclick="window.location.href='coverage.html'">Next &#8594;</button>
+        <div class="footer">
+          <button class="btn" onclick="window.location.href='signup2.html'">
+            &#8592; Back to Your Profile
+          </button>
+          <button class="btn" onclick="window.location.href='coverage.html'">
+            Next &#8594;
+          </button>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
