single login page, registration of accounts and minor fixes on charts and tables. Also updating agents commissions

--- a/login2.html
+++ b/login2.html
@@ -40,12 +40,7 @@
             </div>
           </div>
 
-          <button
-            class="login-btn"
-            onclick="window.location.href='dashboard.html'"
-          >
-            Log In
-          </button>
+          <button class="login-btn" id="loginBtn">Log In</button>
           <button
             class="signup-btn"
             onclick="window.location.href='signup2.html'"
@@ -56,16 +51,72 @@
       </div>
     </div>
 
-    <script>
-      const togglePassword = document.querySelector("#togglePassword");
-      const password = document.querySelector("#password");
+    <!-- Modal Popup for Login Messages -->
+    <div id="loginModal" class="modal" style="display: none">
+      <div class="modal-content">
+        <span class="close" id="closeModal">&times;</span>
+        <span
+          id="modalIcon"
+          style="font-size: 2.5rem; display: block; margin-bottom: 10px"
+        ></span>
+        <p id="modalMessage"></p>
+      </div>
+    </div>
 
-      togglePassword.addEventListener("click", function () {
-        // Toggle password visibility
-        const type =
-          password.getAttribute("type") === "password" ? "text" : "password";
-        password.setAttribute("type", type);
-      });
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="/scripts/firebase.js"></script>
+    <script src="/scripts/login2.js"></script>
+    <style>
+      .modal {
+        position: fixed;
+        z-index: 9999;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .modal-content {
+        background-color: #fff;
+        margin: auto;
+        padding: 20px 30px;
+        border: 1px solid #888;
+        border-radius: 10px;
+        width: 90%;
+        max-width: 350px;
+        text-align: center;
+        position: relative;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      }
+      .close {
+        color: #aaa;
+        position: absolute;
+        top: 10px;
+        right: 18px;
+        font-size: 28px;
+        font-weight: bold;
+        cursor: pointer;
+      }
+      .close:hover,
+      .close:focus {
+        color: #f44336;
+        text-decoration: none;
+        cursor: pointer;
+      }
+      .modal-content .fa-check-circle {
+        color: #4caf50;
+        margin-bottom: 8px;
+      }
+      .modal-content .fa-times-circle {
+        color: #f44336;
+        margin-bottom: 8px;
+      }
+    </style>
   </body>
 </html>
