--- a/dashboard.html
+++ b/dashboard.html
@@ -296,10 +296,12 @@
             <!-- Table -->
             <div class="table-wrapper">
               <table class="styled-table">
+                <!-- GADDI Table Header -->
                 <thead>
                   <tr>
                     <th>ID No.</th>
-                    <th>Name</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
                     <th>Product Name</th>
                     <th>Option #</th>
                     <th>Amount</th>
@@ -446,10 +448,12 @@
             <!-- Table -->
             <div class="table-wrapper">
               <table class="styled-table">
+                <!-- GADDI PLUS Table Header -->
                 <thead>
                   <tr>
                     <th>ID No.</th>
-                    <th>Name</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
                     <th>Product Name</th>
                     <th>Option #</th>
                     <th>Amount</th>
@@ -594,10 +598,12 @@
             <!-- Table -->
             <div class="table-wrapper">
               <table class="styled-table">
+                <!-- GLAFI Table Header -->
                 <thead>
                   <tr>
                     <th>ID No.</th>
-                    <th>Name</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
                     <th>Product Name</th>
                     <th>Option #</th>
                     <th>Amount</th>
@@ -731,47 +737,8 @@
                     <th>Metrics</th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr>
-                    <td>0001</td>
-                    <td>Bryan</td>
-                    <td>Agipo</td>
-                    <td>25</td>
-                    <td>1496.25</td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>0002</td>
-                    <td>Donita</td>
-                    <td>Nose</td>
-                    <td>20</td>
-                    <td>1197</td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>0003</td>
-                    <td>John</td>
-                    <td>Smith</td>
-                    <td>18</td>
-                    <td>1074.60</td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>0004</td>
-                    <td>Sarah</td>
-                    <td>Johnson</td>
-                    <td>22</td>
-                    <td>1316.70</td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>0005</td>
-                    <td>Michael</td>
-                    <td>Williams</td>
-                    <td>15</td>
-                    <td>897.75</td>
-                    <td></td>
-                  </tr>
+                <tbody id="commissionTableBody">
+                  <!-- Commission rows here -->
                 </tbody>
               </table>
             </div>
@@ -786,73 +753,50 @@
                     <tr>
                       <th>Agent ID</th>
                       <th>Agent Name</th>
-                      <th>Number of Invites</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <td>0001</td>
                       <td>Bryan Agipo</td>
-                      <td>25</td>
                     </tr>
                     <tr>
                       <td>0002</td>
                       <td>Donita Nose</td>
-                      <td>20</td>
                     </tr>
                     <tr>
                       <td>0003</td>
                       <td>John Smith</td>
-                      <td>18</td>
                     </tr>
                     <tr>
                       <td>0004</td>
                       <td>Sarah Johnson</td>
-                      <td>22</td>
                     </tr>
                     <tr>
                       <td>0005</td>
                       <td>Michael Williams</td>
-                      <td>15</td>
                     </tr>
                   </tbody>
                 </table>
               </div>
 
               <!-- Right Gray Box: Commission -->
-              <div class="gray-box commission-half-box scrollable">
-                <h3>Commission</h3>
-                <div class="commission-details">
-                  <div class="detail-row">
-                    <span class="detail-label">Agent ID</span>
-                    <span class="detail-value">0001</span>
-                  </div>
-                  <div class="detail-row">
-                    <span class="detail-label">Agent Name</span>
-                    <span class="detail-value">Bryan</span>
-                  </div>
-                  <div class="detail-row">
-                    <span class="detail-label">Number of Invites</span>
-                    <span class="detail-value">25</span>
-                  </div>
-                  <div class="detail-row">
-                    <span class="detail-label">Total Sales</span>
-                    <span class="detail-value"> 9975</span>
-                  </div>
-                </div>
-
-                <div class="commfloating-actions">
-                  <button class="commadd">
-                    <i class="fas fa-plus"></i> Add
-                  </button>
-                  <button class="commupdate">
-                    <i class="fas fa-sync-alt"></i> Update
-                  </button>
-                </div>
-              </div>
+              <!-- Removed as requested -->
             </div>
           </div>
         </section>
+
+        <!-- Floating Add Button for Commission Section -->
+        <div id="commission-fab-container" style="display: none">
+          <div class="commfloating-actions">
+            <button class="commadd" type="button">
+              <i class="fa fa-plus"></i> Add
+            </button>
+            <button class="commupdate" type="button">
+              <i class="fa fa-edit"></i> Update
+            </button>
+          </div>
+        </div>
 
         <!-- COLLECTION SECTION -->
         <section id="collection-section" class="content-section">
@@ -1129,6 +1073,56 @@
       </div>
     </div>
 
+    <!-- Commission Add Modal -->
+    <div id="commissionModal" class="modal-overlay">
+      <div class="modal-content">
+        <span class="modal-close" onclick="closeCommissionModal()"
+          >&times;</span
+        >
+        <div class="modal-title">Add Agent</div>
+        <div class="modal-body">
+          <form id="commissionAddForm">
+            <label
+              >Agent ID: <input type="text" name="agentId" required readonly
+            /></label>
+            <label
+              >First Name: <input type="text" name="firstName" required
+            /></label>
+            <label
+              >Last Name: <input type="text" name="lastName" required
+            /></label>
+            <button type="submit">Add Agent</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- Commission Update Modal -->
+    <div id="commissionUpdateModal" class="modal-overlay">
+      <div class="modal-content">
+        <span class="modal-close" onclick="closeCommissionUpdateModal()"
+          >&times;</span
+        >
+        <div class="modal-title">Update Agent</div>
+        <div class="modal-body">
+          <form id="commissionUpdateForm">
+            <label
+              >Select Agent:
+              <select name="agentId" required>
+                <option value="">Select Agent</option>
+              </select>
+            </label>
+            <label
+              >First Name: <input type="text" name="firstName" required
+            /></label>
+            <label
+              >Last Name: <input type="text" name="lastName" required
+            /></label>
+            <button type="submit">Update Agent</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <!-- Firebase SDKs (compat mode for v9.x) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
@@ -1139,5 +1133,28 @@
     <!-- Chart.js and dashboard logic -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/scripts/dashboard.js"></script>
+    <script>
+      // Show/hide commission floating buttons only on Commission section
+      function updateCommissionFabVisibility() {
+        var fab = document.getElementById("commission-fab-container");
+        var commissionSection = document.getElementById("commission-section");
+        if (fab && commissionSection) {
+          fab.style.display = commissionSection.classList.contains("active")
+            ? "block"
+            : "none";
+        }
+      }
+      // Patch showSection to also update FAB visibility
+      var origShowSection = window.showSection;
+      window.showSection = function (sectionId) {
+        if (typeof origShowSection === "function") origShowSection(sectionId);
+        updateCommissionFabVisibility();
+      };
+      // On page load, set correct visibility
+      document.addEventListener(
+        "DOMContentLoaded",
+        updateCommissionFabVisibility
+      );
+    </script>
   </body>
 </html>
