--- a/setup.html
+++ b/setup.html
@@ -27,28 +27,42 @@
 
         <div class="form-group">
           <label>Email</label>
-          <input type="email" placeholder="Enter your email" />
+          <input
+            type="email"
+            placeholder="Enter your email"
+            name="email"
+            id="email"
+          />
         </div>
 
         <div class="form-group">
           <label>Phone Number</label>
-          <input type="tel" placeholder="Enter your phone number" />
+          <input
+            type="tel"
+            placeholder="Enter your phone number"
+            name="phone"
+            id="phone"
+          />
         </div>
 
         <div class="form-group">
           <label>Password</label>
-          <input type="password" placeholder="Enter your password" />
+          <input
+            type="password"
+            placeholder="Enter your password"
+            name="password"
+            id="password"
+          />
         </div>
 
         <div class="footer">
           <button class="btn" onclick="window.location.href='signup2.html'">
             &#8592; Back to Your Profile
           </button>
-          <button class="btn" onclick="window.location.href='coverage.html'">
-            Next &#8594;
-          </button>
+          <button class="btn" type="button" id="setupNext">Next &#8594;</button>
         </div>
       </div>
     </div>
+    <script src="/scripts/setup.js"></script>
   </body>
 </html>
