Added display currently logged-in user's name and role on dashboard.

--- a/dashboard.html
+++ b/dashboard.html
@@ -46,8 +46,8 @@
         <div class="user-profile">
           <i class="fa-solid fa-user"></i>
           <div class="user-info">
-            <span>Zahir Fernandez</span><br />
-            <small>User</small>
+            <span>Loading...</span><br />
+            <small>Loading...</small>
           </div>
           <i
             class="fas fa-chevron-down dropdown-icon"
@@ -80,7 +80,7 @@
             <img src="/img/dashlogo.PNG" alt="Logo" class="header-logo" />
             <div class="header-text">
               <div class="dashboard-title">Dashboard</div>
-              <div class="welcome-text">Welcome, Zahir!</div>
+              <div class="welcome-text">Loading...</div>
             </div>
           </div>
           <div class="search-wrapper">
