Minor UI fix on admin notifications section

--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
           </div>
           <div class="menu-item" onclick="showSection('notification-section')">
             <i class="fas fa-bell"></i> Notification
-            <div class="badge">4</div>
+            <span class="sidebar-badge">4</span>
           </div>
         </nav>
         <div class="user-profile">
